--- a/package.json
+++ b/package.json
@@ -9,13 +9,16 @@
   },
   "dependencies": {
     "expo": "^35.0.0",
+    "prop-types": "^15.7.2",
     "react": "16.8.3",
     "react-dom": "16.8.3",
     "react-lodash": "^0.1.2",
     "react-native": "https://github.com/expo/react-native/archive/sdk-35.0.0.tar.gz",
     "react-native-calendars": "^1.212.0",
+    "react-native-chart-kit": "^4.1.0",
     "react-native-gesture-handler": "^1.5.0",
     "react-native-reanimated": "^1.4.0",
+    "react-native-svg": "^9.13.5",
     "react-native-web": "^0.11.7",
     "react-navigation": "^4.0.10",
     "react-navigation-stack": "^1.10.3",
