chore: updated readme and app.json

--- a/app.json
+++ b/app.json
@@ -1,14 +1,11 @@
 {
   "expo": {
     "name": "BeautyCalendar",
+    "description": "Beauticians App",
     "slug": "BeautyCalendar",
     "privacy": "public",
     "sdkVersion": "35.0.0",
-    "platforms": [
-      "ios",
-      "android",
-      "web"
-    ],
+    "platforms": ["ios", "android", "web"],
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
@@ -20,11 +17,10 @@
     "updates": {
       "fallbackToCacheTimeout": 0
     },
-    "assetBundlePatterns": [
-      "**/*"
-    ],
+    "assetBundlePatterns": ["**/*"],
     "ios": {
-      "supportsTablet": true
+      "supportsTablet": true,
+      "bundleIdentifier": "com.srvm.beautycalendar"
     }
   }
 }
