--- a/package.json
+++ b/package.json
@@ -9,17 +9,17 @@
     "eject": "expo eject"
   },
   "dependencies": {
-    "expo": "^35.0.0",
+    "expo": "^37.0.0",
     "prop-types": "^15.7.2",
-    "react": "16.11.0",
-    "react-dom": "16.8.3",
+    "react": "16.9.0",
+    "react-dom": "16.9.0",
     "react-lodash": "^0.1.2",
-    "react-native": "0.62.2",
+    "react-native": "https://github.com/expo/react-native/archive/sdk-37.0.1.tar.gz",
     "react-native-calendars": "^1.212.0",
     "react-native-chart-kit": "^4.1.0",
-    "react-native-gesture-handler": "^1.5.0",
-    "react-native-reanimated": "^1.4.0",
-    "react-native-svg": "^9.13.5",
+    "react-native-gesture-handler": "~1.6.0",
+    "react-native-reanimated": "~1.7.0",
+    "react-native-svg": "11.0.1",
     "react-native-web": "^0.11.7",
     "react-navigation": "^4.0.10",
     "react-navigation-stack": "^1.10.3",
@@ -29,7 +29,7 @@
     "redux-thunk": "^2.3.0"
   },
   "devDependencies": {
-    "babel-preset-expo": "^7.1.0"
+    "babel-preset-expo": "^8.1.0"
   },
   "private": true
 }
